@@ -65,5 +65,5 @@
       },
       "x_MailingList" : "mailto:dbi-dev@perl.org"
    },
-   "version" : "1.624"
+   "version" : "1.625"
 }
