@@ -1,6 +1,6 @@
 # -*- perl -*-
 #
-# $Id: Makefile.PL 15586 2013-03-22 20:34:32Z timbo $
+# $Id: Makefile.PL 15594 2013-03-28 18:42:27Z timbo $
 #
 #  Copyright (c) 1994-2010  Tim Bunce  Ireland
 #
@@ -27,7 +27,7 @@ my $ext_pl = $^O eq 'VMS' ? '.pl' : '';
 my $is_developer = ((-d ".svn" || -d ".git") && -f "MANIFEST.SKIP");
 
 $::opt_v = 0;
-$::opt_thread = 1;	# thread if we can, use "-nothread" to disable
+$::opt_thread = $Config{useithreads};	# thread if we can, use "-nothread" to disable
 $::opt_g = 0;
 $::opt_g = 1 if $is_developer && $ENV{LOGNAME} && $ENV{LOGNAME} eq 'timbo'; # it's me! (probably)
 
@@ -46,41 +46,6 @@ if (($ENV{LANG}||'') =~ m/utf-?8/i) {
     print "*** including the output of 'perl -V'\n";
     print "\n";
     sleep 1;
-}
-
-if ($Config{useithreads}) {
-    if ($] < 5.012) { # recent perls are reasonably fre of thread bugs
-        print "\n";
-        print "*** You are using a perl configured with threading enabled.\n";
-        print "*** You should be aware that using multiple threads is\n";
-        print "*** not recommended for production environments.\n";
-        print "\n";
-        sleep 1;
-    }
-    $::opt_thread = 1;
-}
-else {
-
-    if ($Config{archname} =~ /\bthread/ && $::opt_thread) {
-	# oh dear... tell it like it is:
-	print "\n";
-	print "DBI versions from 1.29 onwards no longer support the old style\n";
-	print "of perl threading (now known as '5005 threads'). It is badly flawed\n";
-	print "and could never be safe to use in production environments.\n\n";
-	print "If you are using multiple threads you are *strongly* encouraged to\n";
-	print "upgrade to perl 5.8.2 or later.\n";
-	print "If you are not using multiple threads you are *strongly* encouraged to\n";
-	print "upgrade to at least 5.6.1 (preferably perl 5.8.2 or later.)\n";
-	print "or at the very least rebuild this version with threading disabled.\n";
-	print "If you have stick with your current build of perl...\n";
-	print "then you also have to stick with DBI 1.28 for safety.\n";
-	print "Or if *desparate* you may be able to build this DBI using 'perl Makefile.PL -nothread' but\n";
-	print "but but, that will have *no* logic to handle threads because the logic\n";
-	print "that was there for 5005 threads has now been removed! You have been warned.\n";
-	die "*** ABORTED.\n";
-    }
-
-    $::opt_thread = 0;
 }
 
 my %opts = (
@@ -178,7 +143,7 @@ for ( $cfg_privlibexp, $cfg_archlibexp, $cfg_sitelibexp, $cfg_sitearchexp,
      $_ = '' unless defined $_;
 }
 
-# If working from git-svn, the $Id: Makefile.PL 15586 2013-03-22 20:34:32Z timbo $'s in the mod's should be completed
+# If working from git-svn, the $Id: Makefile.PL 15594 2013-03-28 18:42:27Z timbo $'s in the mod's should be completed
 # before any other action is taken
 $is_developer && -d ".git" && -f "git-svn-vsn.pl" and system $^X, "git-svn-vsn.pl";
 
