@@ -1,4 +1,4 @@
-# $Id: 90sql_type_cast.t 13911 2010-04-22 10:41:37Z timbo $
+# $Id: 90sql_type_cast.t 15588 2013-03-25 17:37:27Z hmbrand $
 # Test DBI::sql_type_cast
 use strict;
 #use warnings; this script generate warnings deliberately as part of the test
@@ -118,6 +118,11 @@ foreach my $test(@tests) {
 
             my $json = JSON::XS->new->encode([$val]);
             #diag(neat($val), ",", $json);
+            # This test is about quotation of the value, not about the
+            # style/formatting of JSON. Strip all leading/trailing
+            # whitespace that is not part of the test, treating '[99]'
+            # identical to ' [ 99 ] ' or '[99   ]'
+            $json =~ s{^\s*\[\s*(.*?)\s*\]\s*$}{[$1]};
             is($json, $test->[5], "json $test->[0]");
         };
     }
