@@ -2,11 +2,16 @@
 
 DBI::Changes - List of significant changes to the DBI
 
-(As of $Date: 2013-03-22 20:37:34 +0000 (Fri, 22 Mar 2013) $ $Revision: 15587 $)
+(As of $Date: 2013-03-28 18:44:41 +0000 (Thu, 28 Mar 2013) $ $Revision: 15595 $)
 
 =encoding ISO8859-1
 
 =cut
+
+=head2 Changes in DBI 1.625 (svn r15595) 28th March 2013
+
+  Fixed heap-use-after-free during global destruction RT#75614
+    thanks to Reini Urban.
 
 =head2 Changes in DBI 1.624 (svn r15576) 22nd March 2013
 
